# esp32c3-sensor

./: Cargo.toml  build.rs  cfg.toml.example  diagram.json  wokwi.toml
.github/workflows/: rust_ci.yml
src/: main.rs
