[package]
name = "esp32c3-sensor"
version = "0.1.0"
authors = ["Steven Carter <steve@javapl.us>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

# hal = ["esp-idf-hal"]
pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
#alloc = ["embedded-svc?/alloc","esp-idf-hal?/alloc", "esp-idf-svc?/alloc"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false }
# esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal.git", rev = "a03e2e32f3d7fb53f1e5ea3c590f6f379ea40b9f", optional = true, default-features = false }
esp-idf-sys = {version = "0.34", default-features=false }
anyhow = "1.0.82"
embedded-svc = "0.27.1"
wifi = "0.1.0"
toml-cfg = "0.2.0"
dht-sensor = {git = "https://github.com/michaelbeaumont/dht-sensor.git", branch = "main" }
serde = "1.0.197"
serde_json = "1.0.115"

[build-dependencies]
embuild = "0.31.3"
toml-cfg = "0.2.0"
